# semiphemeral.com

./: .gitignore  Pipfile  README.md  devops.py  pyproject.toml  vars-ansible-sample  vars-ansible-sample.json  vars-sample  vars-terraform-sample.json
app/src/: Dockerfile  Pipfile  alembic.ini  app.py  common.py  db.py  jobs.py  monitor.py  pyproject.toml  tasks.py  twitter.py  web.py  worker.py  worker_jobs.py
app/src/admin-frontend/: index.html  package-lock.json  package.json  vite.config.js  webpack.config.js
app/src/admin-frontend/src/: App.vue  index.js  main.js
app/src/alembic/versions/: 0ed16aa8a5d7_migrate_direct_message_jobs_dest_.py  2862c7d15fe2_add_indices_to_job_details.py  2bfc623cb018_create_directmessagejob_table.py  2fd31b63d1f2_add_twitter_id_to_fascists.py  307f6507e6d5_create_tweet_index.py  3a1dae769419_add_relationship_between_threads_and_.py  4930a8e7628f_create_indices.py  4d60da56761c_create_exportjob.py  564f4b56ab3c_add_progress_to_export_job.py  57ec4b505a7a_add_job_indices.py  589bce3acd63_recurring_tips.py  5a8952165d08_add_dm_settings.py  5aeff4fa3dc4_add_is_reply_to_tweet.py  6047ff7d4c74_add_blockjob_and_unblockjob.py  643026fb55b3_migrate_tweets_twitter_user_id.py  66e9eb59f8ab_add_user_relationships.py  68436f16dcc1_migrate_threads_root_status_id.py  6bb8ad401c81_add_jobdetails.py  7294f6432f33_modify_tweets.py  7da0b004e281_remove_constraints.py  8256552bd767_remove_users_following_column.py  85ae2884e20b_migrate_tweets_status_id.py  975687104fd6_add_blocked_to_users.py  a41bc63bf1dd_add_settings.py  a7365bc7539c_add_subscription_to_recurringtip.py  b3cdaf937cf4_migrate_users_since_id.py  b4659e7f1af9_typo.py  b47396881c9f_add_fascists_table.py  b96f9104c686_migrate_tweets_in_reply_to_user_id.py  c023500c26fd_add_priority_to_directmessagejob.py  c2fde0a7a114_add_container_name_to_jobs.py  c56f64167dc5_create_initial_tables.py  c73ef4c44359_add_following_to_user.py  c9df871a570d_add_fields_to_tips.py  caba2a0b2912_use_strings_for_twitter_ids.py  cc8c59b6b463_add_indices_to_users.py  d5f983210426_migrate_tweets_in_reply_to_status_id.py  e70394be0af2_remove_constraints_take_two.py  ed240f8de55a_add_tips_index.py  fc34ca769348_add_job_key_to_jobdetails.py
app/src/digitalocean/: ca-certificate.crt
app/src/frontend/: build.sh  index.html  package-lock.json  package.json  webpack.config.js
app/src/frontend/src/: App.vue  index.js  main.js
app/src/static/: bundle-admin.js  bundle.js
app/src/templates/: admin.jinja2  app.jinja2  index.html  index.jinja2  privacy.jinja2
(+175 files in other folders)
