[tool.poetry]
name = "semiphemeral.com"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "*"
black = "*"
click = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
