[tool.poetry]
authors = ["Micah Lee <micah@micahflee.com>"]
description = ""
name = "semiphemeral.com"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "*"
aiohttp-jinja2 = "*"
aiohttp_session = "*"
aiopg = "*"
alembic = "*"
cryptography = "*"
jinja2 = "*"
python = "^3.8"
requests = "*"
sqlalchemy = "^1.4.43"
stripe = "*"
click = ">=7,<8"
redis = "*"
rq = "*"
importlib-resources = "*"
tweepy = "^4.12.0"
rq-dashboard = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.1.13"]
