[tool.poetry]
authors = ["Micah Lee <micah@micahflee.com>"]
description = ""
name = "semiphemeral.com"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "*"
cryptography = "*"
jinja2 = "*"
python = "^3.8"
requests = "*"
sqlalchemy = "^1.4.43"
stripe = "*"
redis = "*"
rq = "*"
importlib-resources = "*"
tweepy = "^4.12.0"
click = "^8.1.3"
Flask = "^2.2.2"
Flask-Session = "^0.4.0"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.1.13"]
